Added to www project page.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@48 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -19,6 +19,25 @@ through traditional publication routes.
 
 Wills et al. (2016) provide a tutorial introduction to catlearn. 
 
+<h1>Installation</h1>
+
+<ol>
+  <li>Install the latest version of R from <a href =
+"https://cran.r-project.org/">CRAN</a>.
+
+  <li>(optional but recommended for those new to R) Install <a href =
+  "https://www.rstudio.com/">RStudio</a>
+
+  <li>Install catlearn:
+  <ol> 
+     <li><b>Stable version</b>: From within R, type:
+     install.packages('catlearn')
+     <li><i>Unstable version</i> (latest features): From within R,
+     type: install.packages('catlearn',
+     repos='http://R-Forge.R-project.org')
+  </ol> 
+</ol>
+
 <h1>Documentation</h1>
 <p> CRG = Catlearn Research Group
 
