Further www updates.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@49 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -1,6 +1,9 @@
 <h1>Introduction</h1>
 
-Formal models are useful in psychology when they allow unambiguous
+<p>Wills et al. (2016) provide a comprehensive introduction to the
+catlearn package. In brief:
+
+<p>Formal models are useful in psychology when they allow unambiguous
 comparison of the relative adequacy of theories across a broad range
 of phenomena (Wills & Pothos, 2012). However, the goal of broad
 comparison is not achievable by any one individual within a reasonable
@@ -29,13 +32,17 @@ Wills et al. (2016) provide a tutorial introduction to catlearn.
   "https://www.rstudio.com/">RStudio</a>
 
   <li>Install catlearn:
-  <ol> 
-     <li><b>Stable version</b>: From within R, type:
-     install.packages('catlearn')
+  <ul> 
+     <li><b>Stable version</b> (choose this if unsure): From within R,
+     type: <p>install.packages('catlearn')
      <li><i>Unstable version</i> (latest features): From within R,
-     type: install.packages('catlearn',
-     repos='http://R-Forge.R-project.org')
-  </ol> 
+     type: <p>install.packages('catlearn',
+     repos='http://R-Forge.R-project.org') <p><b>NOTE</b>: In order to
+     install the unstable version on a Mac or a Linux machine, you
+     will need to install additional software for building R packages
+     from source. These are available on CRAN, in the same place you
+     download R. Windows users do not need to worry about this.
+  </ul> 
 </ol>
 
 <h1>Documentation</h1>
@@ -61,10 +68,13 @@ Wills et al. (2016) provide a tutorial introduction to catlearn.
   empirical evaluations of formal models of
   categorization. <i>Psychological Bulletin, 138,</i> 102-125.
 
-  <li> Wills, A.J., O'Connell, G., Edmunds, C.E.R., & Inkster,
-  A.B.(2016).  Progress in modeling through distributed collaboration:
-  Concepts, tools, and category-learning examples.  <i>The Psychology
-  of Learning and Motivation</i>.
+  <li>Wills, A.J., O'Connell, G.,
+  Edmunds, C.E.R., & Inkster, A.B.(2016). Progress in modeling
+  through distributed collaboration: Concepts, tools, and
+  category-learning examples.  <i>The Psychology of Learning and
+  Motivation</i>.
+
+
 
 </ul>
 
