--- a/www/content.html
+++ b/www/content.html
@@ -55,7 +55,7 @@ Wills et al. (2016) provide a tutorial introduction to catlearn.
   http://catlearn.r-forge.r-project.org/intro-catlearn.pdf </a>
   
   <li>CRG (2016b). <i>Description of ALCOVE</i>. <a href =
-  'alcove-desc.pdf'>
+  'desc-alcove.pdf'>
   http://catlearn.r-forge.r-project.org/desc-alcove.pdf </a>
 
 </ul>
