Updated www page
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@54 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -1,26 +1,38 @@
 <h1>Introduction</h1>
 
-<p>Wills et al. (2016) provide a comprehensive introduction to the
-catlearn package. In brief:
+<p>Catlearn is a <b>framework and archive</b> for <b>distributed
+    collaboration</b> in formal modeling in psychology</b>.  It
+    provides an archival record of:
 
-<p>Formal models are useful in psychology when they allow unambiguous
-comparison of the relative adequacy of theories across a broad range
-of phenomena (Wills & Pothos, 2012). However, the goal of broad
-comparison is not achievable by any one individual within a reasonable
-amount of time (Wills et al., 2016). Catlearn is designed to solve
-this problem by enabling efficient distributed collaboration.
+<ol>
+<li>Canonical Independently Replicated Phenomena (i.e. key datasets),
+<li>formal models
+<li>simulations. 
+</ol>
 
-Catlearn is a framework and archive for formal modeling in psychology.
-It makes use of R's in-built documentation system to build an archival
-record of Canonical Independently Replicated Phenomena, an archive of
-formal models implemented as stateful list processors, and an archive
-of simulations. It is intended to supplement, rather than supplant,
-traditional publication routes. In particular, the documentation
-within catlearn is concise to the point of terseness, and
-does not obviate the need for more fulsome descriptions provided
-through traditional publication routes.
+It supplements, rather than supplants, journal article publication.
 
-Wills et al. (2016) provide a tutorial introduction to catlearn. 
+<p>Wills et al. (2016) provide a tutorial introduction to catlearn. 
+
+<h1>Mailing list</h1> Join the 
+<a href="https://lists.r-forge.r-project.org/mailman/listinfo/catlearn-package">
+catlearn-package</a> e-mail list to get occasional information on
+updates to the catlearn package.
+
+<h1>Current contents</h1>
+
+<p>Catlearn is intended as a framework for distributed collaboration;
+please consider contributing content (models, datasets, simulations)
+to this project.
+
+<p>The latest stable version of catlearn (v. 0.3) contains the following:
+
+<ul>
+<li>6 archived simulations
+<li>3 input representations
+<li>3 CIRP (i.e. datasets)
+<li>1 model implementation (ALCOVE)
+</ul>
 
 <h1>Installation</h1>
 
@@ -45,6 +57,34 @@ Wills et al. (2016) provide a tutorial introduction to catlearn.
   </ul> 
 </ol>
 
+<h1>Talks and workshops</h1>
+
+<h2>Forthcoming</h2>
+
+<b>Introduction to catlearn</b> (1 hour lecture)
+<br><i>Andy Wills</i>, Wed 18th Jan 2017, 4pm.
+<br>School of Psychology, Plymouth University, UK.
+<br><b>FREE</b>. Contact <i>andy@willslab.co.uk</i> for details. 
+
+<h2>Invited talks</h2>
+
+The Catlearn Research Group are keen to talk about the catlearn
+project to any interested party (academic or non-academic). Why not
+invite us to give a talk or run a workshop where you are? We do not
+charge an appearance fee, but would prefer it if you were able to
+reimburse our travel expenses, including accommodation.
+
+<p>The Catlearn Research Group are based in the United Kingdom,
+at <a href = "https://www.plymouth.ac.uk/">Plymouth University</a>
+<a href="http://www.openstreetmap.org/way/42361939">[map]</a>
+
+
+<h1>Contribute to catlearn</h1> 
+
+If you'd like to contribute to this project by adding models,
+datasets, or simulations to the catlearn package,
+contact <b>andy@willslab.co.uk</b>
+
 <h1>Documentation</h1>
 <p> CRG = Catlearn Research Group
 
@@ -59,6 +99,7 @@ Wills et al. (2016) provide a tutorial introduction to catlearn.
   http://catlearn.r-forge.r-project.org/desc-alcove.pdf </a>
 
 </ul>
+
 
 <h1>References</h1>
 
