Added official logo!
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@55 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -1,4 +1,5 @@
-<h1>Introduction</h1>
+<IMG SRC="catlearn-logo.png" ALT="catlearn logo">
+
 
 <p>Catlearn is a <b>framework and archive</b> for <b>distributed
     collaboration</b> in formal modeling in psychology</b>.  It
@@ -115,8 +116,13 @@ contact <b>andy@willslab.co.uk</b>
   category-learning examples.  <i>The Psychology of Learning and
   Motivation</i>.
 
-
-
 </ul>
+
+<h1>Credits</h1> 
+
+The catlearn logo image credit: Elouise Wills. 
+<a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/80x15.png" /></a>
+
+
 
 
