Added 'plans' directory, plus slight fix to www
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@56 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -1,5 +1,4 @@
-<IMG SRC="catlearn-logo.png" ALT="catlearn logo">
-
+<p><IMG SRC="catlearn-logo.png" ALT="catlearn logo">
 
 <p>Catlearn is a <b>framework and archive</b> for <b>distributed
     collaboration</b> in formal modeling in psychology</b>.  It
