Web page for 0.4 release.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@173 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -11,27 +11,39 @@
 </ol>
 
 It supplements, rather than supplants, journal article publication.
+<h1> Getting started</h1>
+<ul>
+  <li><a href="http://www.willslab.org.uk/pubs/wills2016plm.pdf">Wills
+      et al. (2017)</a> provide a tutorial introduction to distributed
+      collaboration and catlearn.
+  <li>a 20 min
+    <a href="http://www.willslab.org.uk/vid/catlearn-intro.mp4">
+      video</a> introduction to distributed collaboration and catlearn
+      (based on a conference presentation at the Experimental
+      Psychology Society conference, London, Jan 2017).
+</ul>
 
-<p>Wills et al. (2016) provide a tutorial introduction to catlearn. 
 
-<h1>Mailing list</h1> Join the 
-<a href="https://lists.r-forge.r-project.org/mailman/listinfo/catlearn-package">
-catlearn-package</a> e-mail list to get occasional information on
-updates to the catlearn package.
+  <h1>Mailing list</h1>
+  Join the 
+  <a href="https://lists.r-forge.r-project.org/mailman/listinfo/catlearn-package">
+    catlearn-package</a> e-mail list to get occasional information on
+  updates to the catlearn package.
 
-<h1>Current contents</h1>
+  <h1>Current contents</h1>
 
 <p>Catlearn is intended as a framework for distributed collaboration;
 please consider contributing content (models, datasets, simulations)
 to this project.
 
-<p>The latest stable version of catlearn (v. 0.3) contains the following:
+<p>The latest stable version of catlearn (v. 0.4) contains the
+following:
 
 <ul>
 <li>6 archived simulations
+<li>4 model implementations (ALCOVE, COVIS, DIVA, Rescorla-Wagner)
 <li>3 input representations
 <li>3 CIRP (i.e. datasets)
-<li>1 model implementation (ALCOVE)
 </ul>
 
 <h1>Installation</h1>
@@ -45,8 +57,8 @@ to this project.
 
   <li>Install catlearn:
   <ul> 
-     <li><b>Stable version</b> (choose this if unsure): From within R,
-     type: <p>install.packages('catlearn')
+     <li><b>Stable version (v. 0.4) </b> (choose this if unsure): From
+     within R, type: <p>install.packages('catlearn')
      <li><i>Unstable version</i> (latest features): From within R,
      type: <p>install.packages('catlearn',
      repos='http://R-Forge.R-project.org') <p><b>NOTE</b>: In order to
@@ -61,12 +73,34 @@ to this project.
 
 <h2>Forthcoming</h2>
 
-<b>Introduction to catlearn</b> (1 hour lecture)
-<br><i>Andy Wills</i>, Wed 18th Jan 2017, 4pm.
+<b>A Practical Introduction to Distributed Collaboration for Formal
+  Modeling</b> (3 hour interactive workshop)
+<br><i>Andy Wills</i>, Thu 23rd March 2017, 10.30am.
+<br>International Convention of Psychological Science, Vienna,
+Austria.
+<br>Contact <i>andy@willslab.co.uk</i> for details.
+
+<p><b>Progress in learning theory through distributed
+    collaboration</b> (20 min conference talk)
+  <br><i>Andy Wills</i>, 11, 12, or 13th April 2017 (TBA)
+  <br>Associative Learning Symposium, Gregynog, Wales.
+  <br>Contact <i>andy@willslab.co.uk</i> for details.
+  
+
+<h2>Already given</h2>
+
+<p><b>Progress in modelling through distributed
+    collaboration</b> (20 min conference talk)
+  <br><i>Andy Wills</i>, Jan 2017
+  <br>Experimental Psychology Society, London, UK.
+  <br>Contact <i>andy@willslab.co.uk</i> for details.
+
+<p><b>Introduction to catlearn</b> (1 hour lecture)
+<br><i>Andy Wills</i>, Wed 26th Jan 2017, 4pm.
 <br>School of Psychology, Plymouth University, UK.
 <br><b>FREE</b>. Contact <i>andy@willslab.co.uk</i> for details. 
 
-<h2>Invited talks</h2>
+<h2>Invite us to give a talk or workshop?</h2>
 
 The Catlearn Research Group are keen to talk about the catlearn
 project to any interested party (academic or non-academic). Why not
@@ -110,7 +144,7 @@ contact <b>andy@willslab.co.uk</b>
   categorization. <i>Psychological Bulletin, 138,</i> 102-125.
 
   <li>Wills, A.J., O'Connell, G.,
-  Edmunds, C.E.R., & Inkster, A.B.(2016). Progress in modeling
+  Edmunds, C.E.R., & Inkster, A.B.(2017). Progress in modeling
   through distributed collaboration: Concepts, tools, and
   category-learning examples.  <i>The Psychology of Learning and
   Motivation</i>.
