Updated project web page.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@200 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -13,16 +13,24 @@
 It supplements, rather than supplants, journal article publication.
 <h1> Getting started</h1>
 <ul>
-  <li><a href="http://www.willslab.org.uk/pubs/wills2016plm.pdf">Wills
-      et al. (2017)</a> provide a tutorial introduction to distributed
-      collaboration and catlearn.
   <li>a 20 min
     <a href="http://www.willslab.org.uk/vid/catlearn-intro.mp4">
-      video</a> introduction to distributed collaboration and catlearn
-      (based on a conference presentation at the Experimental
-      Psychology Society conference, London, Jan 2017).
+      video</a>.
+    <li>a full-length 
+    <a href="http://www.willslab.org.uk/pubs/wills2016plm.pdf">
+      article</a>.
+  <li>a half-day  
+    <a href="http://www.willslab.org.uk/vid/icps2017/index.html">
+      tutorial</a>.
 </ul>
 
+<h1>Come to our next event!</h1>
+
+<p><b>A Practical Introduction to Distributed Collaboration for Formal
+  Modeling</b> (half-day workshop)
+<br>22nd July 2017.
+<br>50th Annual Meeting of the Society for Mathematical Psychology,
+University of Warwick, UK.
 
   <h1>Mailing list</h1>
   Join the 
@@ -69,50 +77,6 @@ following:
   </ul> 
 </ol>
 
-<h1>Talks and workshops</h1>
-
-<h2>Forthcoming</h2>
-
-<b>A Practical Introduction to Distributed Collaboration for Formal
-  Modeling</b> (3 hour interactive workshop)
-<br><i>Andy Wills</i>, Thu 23rd March 2017, 10.30am.
-<br>International Convention of Psychological Science, Vienna,
-Austria.
-<br>Contact <i>andy@willslab.co.uk</i> for details.
-
-<p><b>Progress in learning theory through distributed
-    collaboration</b> (20 min conference talk)
-  <br><i>Andy Wills</i>, 11, 12, or 13th April 2017 (TBA)
-  <br>Associative Learning Symposium, Gregynog, Wales.
-  <br>Contact <i>andy@willslab.co.uk</i> for details.
-  
-
-<h2>Already given</h2>
-
-<p><b>Progress in modelling through distributed
-    collaboration</b> (20 min conference talk)
-  <br><i>Andy Wills</i>, Jan 2017
-  <br>Experimental Psychology Society, London, UK.
-  <br>Contact <i>andy@willslab.co.uk</i> for details.
-
-<p><b>Introduction to catlearn</b> (1 hour lecture)
-<br><i>Andy Wills</i>, Wed 26th Jan 2017, 4pm.
-<br>School of Psychology, Plymouth University, UK.
-<br><b>FREE</b>. Contact <i>andy@willslab.co.uk</i> for details. 
-
-<h2>Invite us to give a talk or workshop?</h2>
-
-The Catlearn Research Group are keen to talk about the catlearn
-project to any interested party (academic or non-academic). Why not
-invite us to give a talk or run a workshop where you are? We do not
-charge an appearance fee, but would prefer it if you were able to
-reimburse our travel expenses, including accommodation.
-
-<p>The Catlearn Research Group are based in the United Kingdom,
-at <a href = "https://www.plymouth.ac.uk/">Plymouth University</a>
-<a href="http://www.openstreetmap.org/way/42361939">[map]</a>
-
-
 <h1>Contribute to catlearn</h1> 
 
 If you'd like to contribute to this project by adding models,
@@ -133,6 +97,43 @@ contact <b>andy@willslab.co.uk</b>
   http://catlearn.r-forge.r-project.org/desc-alcove.pdf </a>
 
 </ul>
+
+
+<h1>Invite us to give a talk or workshop?</h2>
+
+The Catlearn Research Group are keen to talk about the catlearn
+project to any interested party (academic or non-academic). Why not
+invite us to give a talk or run a workshop where you are? We do not
+charge an appearance fee, but would prefer it if you were able to
+reimburse our travel expenses, including accommodation.
+
+<p>The Catlearn Research Group are based in the United Kingdom,
+at <a href = "https://www.plymouth.ac.uk/">Plymouth University</a>
+<a href="http://www.openstreetmap.org/way/42361939">[map]</a>
+
+
+
+<h2>Previous talks and workshops</h2>
+
+<p><b>Progress in learning theory through distributed
+    collaboration</b> 
+  <br><i>Andy Wills</i>, 11th April 2017
+  <br>Associative Learning Symposium, Gregynog, Wales.
+
+<p><b>A Practical Introduction to Distributed Collaboration for Formal
+  Modeling</b> 
+<br><i>Andy Wills</i>, Thu 23rd March 2017, 10.30am.
+<br>International Convention of Psychological Science, Vienna,
+Austria.
+
+<p><b>Progress in modelling through distributed
+    collaboration</b> 
+  <br><i>Andy Wills</i>, Jan 2017
+  <br>Experimental Psychology Society, London, UK.
+
+<p><b>Introduction to catlearn</b> 
+<br><i>Andy Wills</i>, Wed 26th Jan 2017, 4pm.
+<br>School of Psychology, Plymouth University, UK.
 
 
 <h1>References</h1>
