web page bux fix.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@201 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -19,8 +19,8 @@ It supplements, rather than supplants, journal article publication.
     <li>a full-length 
     <a href="http://www.willslab.org.uk/pubs/wills2016plm.pdf">
       article</a>.
-  <li>a half-day  
-    <a href="http://www.willslab.org.uk/vid/icps2017/index.html">
+  <li>handouts for a half-day  
+    <a href="http://www.willslab.org.uk/icps2017/index.html">
       tutorial</a>.
 </ul>
 
