Closing down development on r-forge.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@387 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/content.html
+++ b/www/content.html
@@ -11,182 +11,10 @@
 </ol>
 
 It supplements, rather than supplants, journal article publication.
-<h1> Getting started</h1>
-<ul>
-  <li>a 20 min
-    <a href="http://www.willslab.org.uk/vid/catlearn-intro.mp4">
-      video</a>.
-    <li>a full-length 
-    <a href="http://www.willslab.org.uk/pubs/wills2016plm.pdf">
-      article</a>.
-  <li>handouts for a half-day  
-    <a href="http://www.willslab.org.uk/icps2017/index.html">
-      tutorial</a>.
-</ul>
 
-  <h1>Mailing list</h1>
-  Join the 
-  <a href="https://lists.r-forge.r-project.org/mailman/listinfo/catlearn-package">
-    catlearn-package</a> e-mail list to get occasional information on
-  updates to the catlearn package.
+<p>Since the v0.6.1 release (Feb 2019), documentation for the catlearn project has
+been on <a href="http://ajwils72.github.io/catlearn">Github Pages</a>
 
-  <h1>Current contents</h1>
-
-<p>Catlearn is intended as a framework for distributed collaboration;
-please consider contributing content (models, datasets, simulations)
-to this project.
-
-<p>The latest stable version of catlearn (v. 0.6) contains the
-following (<b>bold</b> indicates new to version
-  0.6, <i>italics</i> indicates major update):
-
-  <ul>
-    
-    <li><u>Models</u>:</li>
-    <ol>
-      <li>ALCOVE</li>
-      <li>Bush-Mosteller</li>
-      <li>COVIS</li>
-      <li>DIVA</li>
-      <li><b>EXIT</b></li>
-      <li>GCM</li>
-      <li>MBMF (model-based, model-free
-	hybrid)</li>
-      <li>Rescorla-Wagner</li>
-      <li><b>SUSTAIN</b></li>
-    </ol>
-
-    <li><u>Datasets</u></li>
-    <ol>
-      <li><b>krus96 (inverse base-rate effect)</b></li>
-      <li>nosof88 (stimulus frequency)</li>
-      <li>nosof94 (Type I-VI problems)</li>
-      <li>shin92 (category size)</li>
-    </ol>
-  
-    <li><u>Archived simulations</u>:</li>
-    <ol>
-      <li><b>krus96exit</b></li>
-    <li>nosof88exalcove</li>
-    <li>nosof88protoalcove</li>
-    <li>nosof94bnalcove</li>
-    <li>nosof94exalcove</li>
-    <li><b>nosof94sustain</b></li>
-    <li>shin92exalcove</li>
-    <li>shin92protoalcove</li>
-    </ol>
-    
-
-    <li><u>Archived optimizations</u></b>: Reproducible records of the
-    optimization procedure by which the parameters of the archived
-    simulations were derived.</li>
-
-    <li><i><u>Input representations</u></i>: Reusable functions to
-    generate model input representations for the datasets (CIRP) in
-    this archive.</li>
-
-   
-
-    <li><u>OAT</u> (i.e. automated tests of model output against
-      CIRP)</li>
-
-    <li><u>Support functions</u>:</li>
-    <ol>
-      <li>act2probat (convert output model activation to a
-	predicted rating).</li>
-    </ol>
-</ul>
-
-<h1>Installation</h1>
-
-Since the v0.6 release (July 2018), <b>caltearn has been developed on
-github</b>. Click <a href="https://github.com/ajwills72/catlearn">here</a>
-for installation instructions.
-
-
-<h1>Contribute to catlearn</h1> 
-
-If you'd like to contribute to this project by adding models,
-datasets, or simulations to the catlearn package,
-contact <b>andy@willslab.co.uk</b>
-
-<h1>Invite us to give a talk or workshop?</h2>
-
-The Catlearn Research Group are keen to talk about the catlearn
-project to any interested party (academic or non-academic). Why not
-invite us to give a talk or run a workshop where you are? We do not
-charge an appearance fee, but would prefer it if you were able to
-reimburse our travel expenses, including accommodation.
-
-<p>The Catlearn Research Group are based in the United Kingdom,
-at <a href = "https://www.plymouth.ac.uk/">Plymouth University</a>
-<a href="http://www.openstreetmap.org/way/42361939">[map]</a>
-
-
-
-<h2>Previous talks and workshops</h2>
-
-<p><b>Progress in modelling through distributed
-    collaboration</b> 
-  <br><i>Andy Wills</i>, 19th June 2018
-  <br>International Category Learning Symposium, Plymouth, UK.
-
-<p><b>An introduction to the Open Models project</b>
-  <br><i>Andy Wills</i>, 28th March 2018.
-  <br>Associative Learning Symposium, Gregynog, Wales.
-
-<p><b>An introduction to the Open Models project</b>
-  <br><i>Andy Wills</i>, 27th October 2017.
-  <br>School of Psychology, Cardiff University, UK.
-
-<p><b>A Practical Introduction to Distributed Collaboration for Formal
-    Modeling</b>
-  <br><i>Andy Wills and Charlotte Edmunds</i>, 22nd July 2017.
-  <br>50th Annual Meeting of the Society for Mathematical Psychology,
-  University of Warwick, UK.
-
-<p><b>Progress in learning theory through distributed
-    collaboration</b> 
-  <br><i>Andy Wills</i>, 11th April 2017
-  <br>Associative Learning Symposium, Gregynog, Wales.
-
-<p><b>A Practical Introduction to Distributed Collaboration for Formal
-  Modeling</b> 
-<br><i>Andy Wills</i>, Thu 23rd March 2017, 10.30am.
-<br>International Convention of Psychological Science, Vienna,
-Austria.
-
-<p><b>Progress in modelling through distributed
-    collaboration</b> 
-  <br><i>Andy Wills</i>, Jan 2017
-  <br>Experimental Psychology Society, London, UK.
-
-<p><b>Introduction to catlearn</b> 
-<br><i>Andy Wills</i>, Wed 26th Jan 2017, 4pm.
-<br>School of Psychology, Plymouth University, UK.
-
-
-<h1>References</h1>
-
-<ul>
-
-  <li> Wills, A.J., & Pothos, E.M. (2012). On the adequacy of current
-  empirical evaluations of formal models of
-  categorization. <i>Psychological Bulletin, 138,</i> 102-125.
-
-  <li>Wills, A.J., O'Connell, G.,
-  Edmunds, C.E.R., & Inkster, A.B.(2017). Progress in modeling
-  through distributed collaboration: Concepts, tools, and
-  category-learning examples.  <i>The Psychology of Learning and
-  Motivation</i>.
-
-</ul>
-
-<h1>Credits</h1> 
-
-The catlearn logo image credit: Elouise Wills. 
-<a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/80x15.png" /></a>
-
-
-
+<p>Since the v0.6 release (July 2018), catlearn has been developed on
+<a href="https://github.com/ajwills72/catlearn">github</a>.
 
