--- a/www/content.html
+++ b/www/content.html
@@ -13,7 +13,7 @@
 It supplements, rather than supplants, journal article publication.
 
 <p>Since the v0.6.1 release (Feb 2019), documentation for the catlearn project has
-been on <a href="http://ajwils72.github.io/catlearn">Github Pages</a>
+been on <a href="https://ajwills72.github.io/catlearn">Github Pages</a>
 
 <p>Since the v0.6 release (July 2018), catlearn has been developed on
 <a href="https://github.com/ajwills72/catlearn">github</a>.
